# ngt-archive

./: .coveragerc  .dockerignore  .gitignore  CHANGES.md  README.md  docker-compose.yml  env.copyme  main.copyme  maintenance.html  minting_dois.ipynb  ngt-dev-archive-api-cleaned-with-datasets.json  pyproject.toml  pytest.ini  settings_local_py.jinja2  setup.py  virtualhost.conf
.circleci/: config.yml
.github/: lintconfig.yaml
.github/workflows/: docker-image.yaml  lint_helm.yaml  pages.yaml  sphinx.yaml  tests.yml
.menv/: pip-selfcheck.json
archive_api/: admin.py  apps.py  backends.py  forms.py  models.py  permissions.py  report.py  serializers.py  signals.py  urls.py  views.py  viewsets.py
archive_api/essdive_transfer/: crosswalk.py  tasks.py
archive_api/fixtures/: test_archive_api.json  test_auth.json  test_downloadlog.json  test_essdive_transfer.json
archive_api/migrations/: 0001_initial.py  0008_alter_dataset_options.py  0009_alter_ngee_tropics_resources.py  0010_person_orcid.py  0011_dataset_rename_created_by.py  0012_dataset_managed_by_editable.py  0013_publication_workflow_refactor.py  0014_status_change_datetime.py  0015_managed_modified_date.py  0016_update_approval_publication_dates.py  0017_historicaldataset.py  0018_historical_change_reason.py  0019_serviceaccount.py  0020_dataset_doi_to_urlfield.py  0021_essdivetransfer.py  0022_service_account_field_sizes.py  0023_secret_field_size.py  0024_dataset_reference_field_size.py  0025_dataset_reference_limit.py  0026_alter_dataset_authors_alter_site_pis.py  0027_add_dataset_desc_limit.py  0028_alter_historicaldataset_options_and_more.py  0029_alter_dataset_funding_organizations_and_more.py  0030_alter_dataset_doe_funding_contract_numbers_and_more.py
archive_api/service/: common.py  osti.py
archive_api/templatetags/: str_utils.py
archive_api/tests/: essdive-transfer.jsonld  essdive_transfer_locations.json  locations.csv  ngt_essdive_dataset.json  ngt_essdive_dataset_duplicate.json  ngt_essdive_dataset_result.json  ngt_essdive_dataset_result_duplicate.json  ngt_essdive_dataset_unauthorized.json  pytest_plugin.py  (+11 more)
docker/: Dockerfile  docker-entrypoint.sh
docs/: conf.py  contact.rst  datasets.rst  helm_chart.rst  index.rst  intro.rst  quickstart.rst  releases.rst
helm/: Chart.yaml  README.md  values.yaml
licenses/: google-maps-js.txt
ngt_archive/: __init__.py  celery_app.py  local_bak.py  middleware.py  settings.py  urls.py
provision/: Dockerfile  docker-entrypoint.sh  docker-manage-entrypoint.sh  local.py
ui/: urls.py
(+62 files in other folders)
