[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools-git-versioning",]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}.post{ccount}"
dirty_template = "{tag}.post{ccount}+dirty"

[project]
name = "ngt_archive"
dynamic = ["version"]
authors = [{name = "Val Hendrix", email = "vchendrix@lbl.gov"}]
description = "NGEE Tropics Archive Service"
urls = {Homepage = "https://github.com/NGEET/ngt-archive"}
requires-python = '>=3.9,<3.11'
dependencies = [
    "Django >= 4.1.1,<=4.2.5",
    "djangorestframework >= 3.11.0,<=3.14.0",
    "django-filter",
    "pyldap>=3.0.0",
    "django-auth-ldap>=2.1.1",
    "django-oauth-toolkit",
    "django-simple-history",
    "cryptography",
    "celery",
    "django_celery_results",
    "requests_toolbelt",
]



[project.optional-dependencies]
dev = ["flake8", "pytest", "pytest-celery", "pytest-django", "pytest-flake8",
    "pytest-mypy", "pytest-cov", "pytest-asyncio", "types-PyYAML", "types-chardet",
    "types-cryptography", "types-requests"]
deploy = ["psycopg2-binary", "uwsgi"]
docs = ["sphinx",
    "myst-parser"]

[tool.setuptools]
py-modules = ["manage"]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["*.tests"]
namespaces = false
